--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,25 @@ td
   margin: auto;
 }
 
+.img_def
+{
+  height: 200px;
+  width: 80%;
+  border: 5px #cbac85 solid;
+  border-radius: 5%;
+  display: block;
+  margin: auto;
+}
+.img_education
+{
+  height: 300px;
+  width: 80%;
+  border: 5px #cbac85 solid;
+  border-radius: 5%;
+  display: block;
+  margin: auto;
+}
+
 .info_box
 {
   width: 80%;
@@ -105,6 +124,7 @@ td
   background-color: #B3C7D6FF;
   border-radius: 25px;
 }
+
 
 .table
 {
